--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="card" align="center">
+	<img class="img" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" height="200px">
+	<h2><span class="h_t">Pricing Card</span>
+	 <br/>Price: Rs.200
+	<br/>Description: Lorem
+	<br/>ipsum dolor sit, amet,
+	<br/>consectetur adipiscing
+	<br/>elit.
+	</h2>
+	<button class="btn">Buy Now</button>	
+	</div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
