--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<br/>consectetur adipiscing
 	<br/>elit.
 	</h1>
-	<button class="btn">Buy Now</button>	
+	<p class="btn">Buy Now</p>	
 	</div>
 
 	
