--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<div class="card" align="center">
 	<img class="img" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" height="200px">
-	<h1><span class="h_t">Pricing Card</span>
-	 <br/>Price: Rs.200
-	<br/>Description: Lorem
-	<br/>ipsum dolor sit, amet,
+	<h1 class="h_t">Pricing Card</h1>
+	<p>Price: Rs.200 </p>
+	 <p>Description: Lorem
+	<br/>ipsum dolor sit amet,
 	<br/>consectetur adipiscing
 	<br/>elit.
-	</h1>
-	<p class="btn">Buy Now</p>	
+	</p>
+	<button class="btn">Buy Now</button>	
 	</div>
 
 	
